# opencc-py

./: .gitattributes  .gitignore  CHANGELOG.md  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md
examples/basic-conversion/: README.md  example.py
examples/custom-dictionary/: README.md  example.py
examples/html-conversion/: README.md  example.py
examples/locale-differences/: README.md  example.py
examples/no-phrase-conversion/: README.md  example.py
samples/: README.md  article_cn_to_tw2.py  basic_conversion.py  cli_usage.py  custom_dictionary.py  html_conversion.py  presets.py  requirements.txt
src/opencc_py/: __init__.py  cli.py  core.py  dict_data.py  html.py  locale.py  locale_data.py
src/opencc_py/presets/: __init__.py  cn2t.py  full.py  t2cn.py
tests/: test_cli.py  test_converter.py  test_dict_data.py  test_html.py  test_presets_and_locale.py  test_trie.py
tools/: generate_dict_data.py
